improve youtube thumbnail getter and fix z-index for play button

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -560,7 +560,6 @@ main{
     height: 60px;
     background-color: #333;
     box-shadow: 0 0 30px rgb(0 0 0 / 60%);
-    z-index: 1;
     opacity: 0.8;
     border-radius: 6px;
     position: absolute;
